opam-version: "2.0"
version: "1.0"
authors: "Chris Nevers <christophernevers96@gmail.com>"
maintainer: "Chris Nevers <christophernevers96@gmail.com>"
homepage: "https://github.com/chrisnevers/ocaml-youtube-dl"
bug-reports: "https://github.com/chrisnevers/ocaml-youtube-dl/issues"
dev-repo: "git://github.com/chrisnevers/ocaml-youtube-dl.git"
synopsis: "A wrapper for the youtube-dl command line tool"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest"] {with-test}
]
depends: [
  "dune" {build}
  "alcotest" {with-test}
]
